# rust-gpu-sdf

./: Cargo.toml  README.md  crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: rust.yml
rust_gpu_sdf/: all.html  fn.default.html  index.html  sidebar-items.js  type.D1.html  type.D2.html  type.D3.html
rust_gpu_sdf/bound_checker/: index.html  sidebar-items.js  struct.BoundChecker.html
rust_gpu_sdf/markers/: enum.Approx.html  enum.Exact.html  index.html  sidebar-items.js
rust_gpu_sdf/operators/: index.html  sidebar-items.js  struct.Operator.html  struct.Operator_Op.html  struct.Operator_Target.html  trait.SignedDistanceOperator.html
rust_gpu_sdf/prelude/: index.html
rust_gpu_sdf/raymarch/: index.html  sidebar-items.js  struct.RaymarchOutput.html  trait.Raymarch.html
rust_gpu_sdf/signed_distance_field/: index.html  sidebar-items.js  trait.SignedDistanceField.html  trait.SignedDistanceNormal.html
src/: bound_checker.rs  bound_tester.rs  lib.rs  markers.rs  prelude.rs  tests.rs
src/attribute/: bound_error.rs  color.rs  distance.rs  mod.rs  normal.rs  position.rs  support_function.rs  tangent.rs  uv.rs
src/context/: context_item.rs  context_items.rs  context_path.rs  context_plural.rs  context_query.rs  mod.rs
src/field/: field_attribute.rs  field_attributes.rs  fields.rs  mod.rs
src/field_function/: mod.rs
src/field_operator/: axial_reflect.rs  cartesian_to_spherical.rs  colorize.rs  compose.rs  composite.rs  conditional.rs  displace.rs  elongate.rs  extrude.rs  extrude_interior.rs  gradient_central_diff.rs  gradient_tetrahedron.rs  gradient_uv.rs  hollow.rs  intersection.rs  isosurface.rs  mod.rs  normalize.rs  reflect.rs  repeat.rs  rotate.rs  scale.rs  sdf_color.rs  sdf_normal.rs  sdf_tangent.rs  sdf_uv.rs  sided.rs  slice.rs  (+11 more)
(+566 files in other folders)
