[package]
name = "rust-gpu-sdf"
version = "0.1.0"
edition = "2021"

[features]
default = []
glam = ["rust-gpu-bridge/glam"]
spirv-std = ["rust-gpu-bridge/spirv-std"]

[patch.crates-io]
#rust-gpu-bridge = { git = "https://github.com/bevy-rust-gpu/rust-gpu-bridge", branch = "master" }
#type-fields = { git = "https://github.com/bevy-rust-gpu/type-fields" }

rust-gpu-bridge = { path = "../rust-gpu-bridge" }
type-fields = { path = "../type-fields" }

[dependencies]
rust-gpu-bridge = "0.4.0"
type-fields = "0.1.0"
